--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       </div>
     </aside>
 
-
     <main class="main-content">
       <header class="top-nav">
         <nav>
@@ -54,11 +53,70 @@
       <section class="section">
         <h2>Recently played</h2>
         <div class="card-row">
-          <div class="card"><img src="img/stranger.jpeg" alt=""><p>Stranger Things</p><p class="card-subtitle">Kyle Dixon & Michael Stein</p></div>
-          <div class="card"><img src="img/aquietplace.jpeg" alt=""><p>A Quiet Place</p><p class="card-subtitle">Subtitle</p></div>
-          <div class="card"><img src="img/split.jpeg" alt=""><p>Split</p><p class="card-subtitle">Subtitle</p></div>
-          <div class="card"><img src="img/cure.jpeg" alt=""><p>A Cure for Wellness</p><p class="card-subtitle">Subtitle</p></div>
-          <div class="card"><img src="img/sinister.jpeg" alt=""><p>Sinister</p><p class="card-subtitle">Subtitle</p></div>
+          <div class="card">
+            <div class="card-image">
+              <img src="img/stranger.jpeg" alt="">
+              <div class="play-icon">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="white">
+                  <path d="M5 3v18l15-9L5 3z"></path>
+                </svg>
+              </div>
+            </div>
+            <p>Stranger Things</p>
+            <p class="card-subtitle">Kyle Dixon & Michael Stein</p>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+              <img src="img/aquietplace.jpeg" alt="">
+              <div class="play-icon">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="white">
+                  <path d="M5 3v18l15-9L5 3z"></path>
+                </svg>
+              </div>
+            </div>
+            <p>A Quiet Place</p>
+            <p class="card-subtitle">Subtitle</p>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+              <img src="img/split.jpeg" alt="">
+              <div class="play-icon">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="white">
+                  <path d="M5 3v18l15-9L5 3z"></path>
+                </svg>
+              </div>
+            </div>
+            <p>Split</p>
+            <p class="card-subtitle">Subtitle</p>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+              <img src="img/cure.jpeg" alt="">
+              <div class="play-icon">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="white">
+                  <path d="M5 3v18l15-9L5 3z"></path>
+                </svg>
+              </div>
+            </div>
+            <p>A Cure for Wellness</p>
+            <p class="card-subtitle">Subtitle</p>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+              <img src="img/sinister.jpeg" alt="">
+              <div class="play-icon">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="white">
+                  <path d="M5 3v18l15-9L5 3z"></path>
+                </svg>
+              </div>
+            </div>
+            <p>Sinister</p>
+            <p class="card-subtitle">Subtitle</p>
+          </div>
         </div>
       </section>
 
@@ -66,14 +124,36 @@
         <h2>Creato per John Doe</h2>
         <p class="description">Più ascolti, più accurati saranno i suggerimenti.</p>
         <div class="card-row">
-          <div class="card"><img src="img/radar.jpeg" alt=""><p>Il tuo Release Radar</p><p class="card-subtitle">Release Radar</p></div>
-          <div class="card"><img src="img/einaudi.jpeg" alt=""><p>Il tuo Daily Mix 1</p><p class="card-subtitle">Daily Mix 1</p></div>
+          <div class="card">
+            <div class="card-image">
+              <img src="img/radar.jpeg" alt="">
+              <div class="play-icon">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="white">
+                  <path d="M5 3v18l15-9L5 3z"></path>
+                </svg>
+              </div>
+            </div>
+            <p>Il tuo Release Radar</p>
+            <p class="card-subtitle">Release Radar</p>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+              <img src="img/einaudi.jpeg" alt="">
+              <div class="play-icon">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="white">
+                  <path d="M5 3v18l15-9L5 3z"></path>
+                </svg>
+              </div>
+            </div>
+            <p>Il tuo Daily Mix 1</p>
+            <p class="card-subtitle">Daily Mix 1</p>
+          </div>
         </div>
       </section>
     </main>
   </div>
 
-  
   <footer class="player">
     <img src="img/player_left.jpg" alt="Now Playing" class="player-img">
     <div class="track-info">
