--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
       </div>
       <nav class="menu">
         <ul>
-          <li class="active"><img src="img/home.svg" alt=""> Home</li>
-          <li><img src="img/search.svg" alt=""> Cerca</li>
-          <li><img src="img/libreria.svg" alt=""> La tua libreria</li>
+          <li class="active"><img src="img/home.svg" alt=""><span>Home</span></li>
+          <li><img src="img/search.svg" alt=""><span>Cerca</span></li>
+          <li><img src="img/libreria.svg" alt=""><span>La tua libreria</span></li>
         </ul>
       </nav>
       <div class="playlist">
         <p>PLAYLIST</p>
         <button>+ Crea Playlist</button>
         <ul>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
+          <li><span>Nome Playlist</span></li>
+          <li><span>Nome Playlist</span></li>
+          <li><span>Nome Playlist</span></li>
         </ul>
       </div>
       <div class="user">
@@ -34,6 +34,7 @@
         <p>John Doe</p>
       </div>
     </aside>
+
 
     <main class="main-content">
       <header class="top-nav">
@@ -153,6 +154,7 @@
       </section>
     </main>
   </div>
+
 
   <footer class="player">
     <img src="img/player_left.jpg" alt="Now Playing" class="player-img">
